// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleEditorToolbar button actions 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="go-fullscreen-button"
    >
      Full Screen
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      See as source
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
      <div
        class="position-absolute"
        data-testid="link-copied-alert"
        style="margin-top: 34px; right: 0px;"
      >
        <div
          class="dropdown-menu dropdown-menu-sw kogito-github-action-alert"
        >
          <span>
            Link copied to clipboard
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar copied to clipboard message 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="go-fullscreen-button"
    >
      Full Screen
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      See as source
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode false | textModeAvailable false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="go-fullscreen-button"
    >
      Full Screen
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      See as source
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode false | textModeAvailable true 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="go-fullscreen-button"
    >
      Full Screen
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-source-button"
    >
      See as source
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
  <div
    class="flash flash-info"
    style="height: 32px; padding: 5px 15px 5px 15px; white-space: nowrap;"
  >
    <h5>
      This is a read-only visualization.
    </h5>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode true | textModeAvailable false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-diagram-button"
    >
      See as diagram
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly false | textMode true | textModeAvailable true 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-diagram-button"
    >
      See as diagram
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly true | textMode false | textModeAvailable false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="go-fullscreen-button"
    >
      Full Screen
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-source-button"
      disabled=""
    >
      See as source
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
  <div
    class="flash flash-info"
    style="height: 32px; padding: 5px 15px 5px 15px; white-space: nowrap;"
  >
    <h5>
      This is a read-only visualization.
    </h5>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar readonly true | textMode true | textModeAvailable false 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-diagram-button"
    >
      See as diagram
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar see as diagram 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-diagram-button"
    >
      See as diagram
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleEditorToolbar see as source 1`] = `
<DocumentFragment>
  <div
    style="display: flex;"
  >
    <textarea
      style="opacity: 0; width: 0px; height: 0px;"
    >
      test.com/editor
    </textarea>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="go-fullscreen-button"
    >
      Full Screen
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="see-as-source-button"
    >
      See as source
    </button>
    <button
      class="btn d-none d-md-inline-block kogito-button"
      data-testid="open-ext-editor-button"
    >
      Open in Test Online Editor
    </button>
    <div
      class="position-relative"
    >
      <button
        class="btn d-none d-md-inline-block kogito-button"
        data-testid="copy-link-button"
      >
        Copy link to Test Online Editor
      </button>
    </div>
  </div>
</DocumentFragment>
`;
